deploy/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodetest-deployment
  labels:
    app: nodetest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodetest
  template:
    metadata:
      labels:
        app: nodetest
    spec:
      containers:
      - name: nodetest
        image: quay.io/bjoydeep/nodetest:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "32Mi"
            cpu: "50m"
          limits:
            memory: "64Mi"
            cpu: "100m"
