deploy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nodetest
  name: nodetest
spec:
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    name: web
  selector:
    app: nodetest
