deploy/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: nodetest
  labels:
    app: nodetest
spec:
  to:
    kind: Service
    name: nodetest
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
